--- a/1style.css
+++ b/1style.css
@@ -46,3 +46,20 @@ main{
     height: 472px;
     width: 269px;
 }
+
+#redes-sociais img{
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-sizing: border-box;
+
+}
+
+#redes-sociais{
+    text-align: right;
+}
+
+    img:hover{
+    border: solid 2px rgba(255, 255, 255, 0.733);
+    transform: translate(-3px, -3px)
+}
